--- a/Bit202/index.html
+++ b/Bit202/index.html
@@ -14,17 +14,18 @@
             <nav>
                 <a href="#"><img src="src/images/logo.png" alt=""></a>
                 <ul  class="nav_links">
-                    <li><a href="#">HOME</a></li>
+                    <li><a href="#hom">HOME</a></li>
                     <li><a href="#abou">ABOUT ME</a></li>
                     <li><a href="#serv">SERVICES</a></li>
                     <li><a href="#service">GALLERY</a></li>
                     <li><a href="#cont">CONTACTS</a></li>
                 </ul>
             </nav> 
-    </section>
+    </section id="hom">
     <div class="container">
         <h1>Hello, my name is</h1>
-        <h2>Kiprono <span>Ezra </span> <artist</h3>
+        <h2>Kiprono <span>Ezra </span> <artist</h2>
+        <h3>A proffessional 3D artist & programmer</h3>
         <div class="newsletter">
             <form>
                 <input type="email" name="email" id="mail" placeholder="Enter Your Email">
@@ -47,7 +48,7 @@
             Ezra artistics nature continues to elvolve in various emerging technologiessuch as 
             nft collection.  
           </p>
-          <button type="button">Let's Talk</button>
+          <a class="button" href="https://www.instagram.com/animpython">Let's Talk</a>
       </div>
     </div>
 </section>
@@ -81,11 +82,11 @@
                 <i class="fa fa-code"></i>
                 <h3>3d Animation and Visualization</h3>
                 <P>
-                   I would create magic with my expertise and create 3D models from
-                   sketches, CAD drawings, photographs or just verbal descriptions. 
-                   From industrial  product presentation,character modelling and sclupting.
-                   I use modern and the latest technology to convert your ideas into realistic
-                   3d modell that would help sell your products and ideas with design concepts much easier.
+                    You may be confused about something in making the 
+                    decision, or you do not know whether you can rely on me to make you 
+                    proffessional 3d animation annd 3d Visualization.
+                    But do not worry, I am well sure 
+                    that the work I will present to you is appropriate and perfect
                 </P>
             </div>
          </div>
@@ -96,13 +97,12 @@
             </div>
             <div class="box">
                 <i class="fa fa-line-chart"></i>
-                <h4>Python Generated artwork</h4>
+                <h4>Front end web developer</h4>
                 <P>
-                   I would create magic with my expertise and create 3D models from
-                   sketches, CAD drawings, photographs or just verbal descriptions. 
-                   From industrial  product presentation,character modelling and sclupting.
-                   I use modern and the latest technology to convert your ideas into realistic
-                   3d modell that would help sell your products and ideas with design concepts much easier.
+                Front end web development my profficiency in html,css and javascript
+                would enable me to get you an amazing responsive  front end web design.
+                With the additional  of my skills in 3d animation and visualization 
+                you will get amazing arwork for your website.
                 </P>
             </div>
          </div>
@@ -112,8 +112,7 @@
 
 <section id="service">
     <div class="tittle-text">
-        <p>OUR PHOTO GALLERY</p>
-        <h1>We Provide Better Services</h1>
+        <h1>GALLERY</h1>
     </div>
     <div class="service-box">
         <div class="single-service">
@@ -135,7 +134,7 @@
             </div>
         </div>
         <div class="single-service">
-            <img src="src/images/PRODUCT RENDER.jpeg" alt="">
+            <img src="src/images/images.jpeg" alt="">
             <div class="overlay"></div>
             <div class="service-desc">
                 <h3>PRODUCT RENDERS</h3>
@@ -154,6 +153,13 @@
         </div>
     </div>
 </section>
+<!--what clients say-->
+<section>
+    <div class="freelance">
+        <p>Let Me designs for you digitalize 3d artwork</p>
+    <a class="buttontwo" href="https://www.upwork.com/freelancers/~01cadd5b8da3b9386b/">Hire me</a>
+    </div>
+</section>
 <!--footer-->
 <footer id="cont">
     <p>Kiprono Ezra</p>
@@ -161,12 +167,15 @@
         to subscribe to my channel
     </p>
     <div class="social">
-        <a href=""><i class="fa-brands fa-facebook"></i></a>
-        <a href=""><i class="fa-brands fa-instagram"></i></a>
-        <a href=""><i class="fa-brands fa-twitter"></i></a>
-        <a href=""><i class="fa-brands fa-youtube"></i></a><br>      
+        <a href="https://web.whatsapp.com/"> <i class="fa-brands fa-whatsapp"></i></a>
+        <a href="https://www.linkedin.com/in/kiprono-ezra-818403204/"> <i class="fa-brands fa-linkedin"></i></a>
+        <a href="https://web.facebook.com/kiprono.koech.7330763"><i class="fa-brands fa-facebook"></i></a>
+        <a href="https://www.instagram.com/animpython/"><i class="fa-brands fa-instagram"></i></a>
+        <a href="https://twitter.com/kipronochirch16"><i class="fa-brands fa-twitter"></i></a>
+        <a href="https://www.youtube.com/channel/UCv2obP0ZjjPV87CI3oOFCxw"><i class="fa-brands fa-youtube"></i></a><br>      
     </div>
-    <p class="end">Copyright By Kiprono</p>
+    <p class="mail" >CONTACT <span>ezrakipz76@gmail.com</span></p>
+    <p class="end">Copyright @Kiprono</p>
 </footer>
 </body>
 </html>
