--- a/Bit202/index.html
+++ b/Bit202/index.html
@@ -48,7 +48,7 @@
             Ezra artistics nature continues to elvolve in various emerging technologiessuch as 
             nft collection.  
           </p>
-          <a class="button" href="https://www.instagram.com/animpython">Let's Talk</a>
+          <a class="button" href="https://drive.google.com/drive/folders/1tyZfA3brKXkOmvem96OP53cyjlR7PFWm?usp=sharing">Download my cv</a>
       </div>
     </div>
 </section>
